--- a/css/Picker_index.css
+++ b/css/Picker_index.css
@@ -165,28 +165,31 @@ div {
     text-align: center;
     font-size: 21px;
 }
+.q_text{
+    height: 20%;
+}
 .q1 {
     display: block;
-    background-color: #bdf;
-    border: 2px solid #1bf;
+    background-color: #ffffff;
+    border: 1px solid;
     min-height: 500px;
-    height: auto;
-    line-height: 200px;
+    height: 50%;
     border-radius: 0.5em;
     -moz-border-radius: 0.5em;
     -webkit-border-radius: 0.5em;
 }
 .q2 {
     display: block;
-    background-color: #bdf;
-    border: 2px solid #1bf;
-    height: 250px;
-    line-height: 200px;
+    background-color: #ffffff;
+    border: 1px solid;
+    height: 30%;
     border-radius: 0.5px;
     -moz-border-radius: 0.5em;
     -webkit-border-radius: 0.5em;
+    line-height: 750%;
 }
 .choice1 {
+    line-height: 1200%;
     display: block;
     float: right;
     background-color: palegreen;
@@ -194,11 +197,11 @@ div {
     width: 50%;
     max-width: 100%;
     max-height: 100%;
-    overflow: visible;
     border-radius: 0.5px;
     -moz-border-radius: 0.5em;
     -webkit-border-radius: 0.5em;
     color: black;
+    height:100%;
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
     -ms-transform: scale(1);
@@ -210,6 +213,7 @@ div {
     transition: .3s;
 }
 .choice2 {
+    line-height: 1200%;
     display: block;
     float: left;
     background-color: indianred;
@@ -217,11 +221,11 @@ div {
     width: 50%;
     max-width: 100%;
     max-height: 100%;
-    overflow: visible;
     border-radius: 0.5px;
     -moz-border-radius: 0.5em;
     -webkit-border-radius: 0.5em;
     color: black;
+    height: 100%;
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
     -ms-transform: scale(1);
@@ -260,21 +264,21 @@ div {
     animation-duration: 2s;
 }
 .selection1 {
-
+    float: left;
     display: inline-block;
     margin-top: 50px;
     color: black;
     color: black;
-    background-color: indianred;
-    border: 2px solid #1bf;
-    max-width: 30%;
+    background-color: #dcdcdc;
+    border: 2px solid #2f4f4f;
+    max-width: 50%;
     line-height: 150px;
     border-radius: 0.5px;
     -moz-border-radius: 0.5em;
     -webkit-border-radius: 0.5em;
 }
 .selections {
-    width: 40%;
+    width: 70%;
     height: 100%;
     border: 3px solid #f2f2f2;
     margin: auto;
@@ -298,7 +302,7 @@ div {
     border: 2px solid #1bf;
 }
 .choice_main{
-    min-height:15%;
+    height: 50%;
     width:100%;
 }
 .add_main {
@@ -483,4 +487,16 @@ div {
 }
 .sign2 {
     color:black;
+}
+.balance_main {
+    width:60%;
+    margin: auto;
+}
+.friend_line {
+    width: 20%;
+    float: right;
+    height: 100%;
+    border: 3px solid #f2f2f2;
+    margin: auto;
+    box-shadow: 0px 0px 20px #000;
 }
